--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html>
+  <head>
+    #dv1 {
+    background-color:lightblue;
+    }
+    
+  </head>
+  <body>
+    <div id="dv1">
+      <p>
+        Yakında görüşmek üzere!!
+      </p>
+    </div>
+  </body>
+</html>
 Merhaba!!
