--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   <head>
-    #dv1 {
+    <style>
+        #dv1 {
     background-color:lightblue;
     }
-    
+      
+    </style>
   </head>
   <body>
     <div id="dv1">
