--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
   <head>
     <style>
+      #bd1{
+        background-color:yellow;
+      }
         #dv1 {
     background-color:lightblue;
     }
       
     </style>
   </head>
-  <body>
+  <body id="bd1">
     <div id="dv1">
       <p>
         Yakında görüşmek üzere!!
