--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <style>
       #bd1{
-        background-color:black;
+        background-color:blue;
       }
         #dv1 {
     background-color:lightblue;
