--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header class="header">
             <a href="#" class="logo">koala.</a>
-            <a href=""class=""><img src="favicon.jpg" alt="koalalogosu" width="100" height="100"></a>
+            <!-- <a href=""class=""><img src="favicon.jpg" alt="koalalogosu" width="100" height="100"></a> -->
             <nav class="navbar">
                 <a href="#" class="active">Anasayfa</a>
                 <a href="#">Hakkında</a>
