Uncomment favicon and shortcut icon links

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="with=device width initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.jpg"> -->
-        <!-- <link rel="shorcut icon" type="image/jpg" href="/koala.jpg"/> -->
+        <link rel="icon" type="image/x-icon" href="/images/favicon.jpg">
+        <<link rel="shorcut icon" type="image/jpg" href="/koala.jpg"/>
 
     </head>
     <body>
