Update contact section with LinkedIn link
Added LinkedIn link to the contact section.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <a href="https://github.com/aksoyha/" class="github"></a>
         <a href="" class="inst"></a>
         <a href="" class="xtwit"></a>
+        <a href="www.linkedin.com/in/hatice-aksoy-18a1382a9" class="linkeden"></a>
     </section>
 
     <footer>
@@ -96,4 +97,5 @@
     </footer>
   
 </body>
+
 </html>
