Add contact form to blog.html
Added a contact form to the blog page.

--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,7 @@
+<?php
+$ad=
+
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +43,16 @@
             Kaynakça<a href="https://tr.wikipedia.org/wiki/Yapay_zek%C3%A2_tarihi">daha fazlası için...wikipedia</a>
         </article>
     </section>
+    <form action="_POST" class="contact-form" key="contact">
+        <label>Adınız:</label>
+        <input type="text">
+        <label>Mail</label>
+        <input type="email">
+        <textarea width="300px" height="300px" ></textarea>
+        
+    </form>
 
     
 </body>
+
 </html>
