Clean up blog.html by removing PHP and citation
Removed PHP code and commented out citation link.

--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@ $ad=
              ABD'de Dartmouth Konferansında düzenlenen bir seminerde ortaya çıktı.
               1974 yılında, ABD ve İngiliz hükûmetleri yapay zeka alanındaki araştırmaları 
               finanse etmeyi bıraktı. Bu olay daha sonra "yapay zekâ kışı" olarak anıldı.</p>
-            Kaynakça<a href="https://tr.wikipedia.org/wiki/Yapay_zek%C3%A2_tarihi">daha fazlası için...wikipedia</a>
+            <!-- Kaynakça<a href="https://tr.wikipedia.org/wiki/Yapay_zek%C3%A2_tarihi">daha fazlası için...wikipedia</a> -->
         </article>
     </section>
     <form action="_POST" class="contact-form" key="contact">
@@ -56,3 +56,4 @@ $ad=
 </body>
 
 </html>
+
