Update blog.html with new article and structure
Added a new article about WEB 4.0 and updated the HTML structure.

--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,13 @@
               finanse etmeyi bıraktı. Bu olay daha sonra "yapay zekâ kışı" olarak anıldı.</p>
             <!-- Kaynakça<a href="https://tr.wikipedia.org/wiki/Yapay_zek%C3%A2_tarihi">daha fazlası için...wikipedia</a> -->
         </article>
+        <article>
+            <h4> WEB 4.0 hakkında</h4>
+            <p>
+           Lorem ipsummmm
+            
+        </p>
+            </article>
     </section>
     <form action="contact.php"method="POST" class="contact-form" key="contact">
         <label>Adınız:</label>
@@ -61,6 +68,7 @@
 </body>
 
 </html>
+
 
 
 
