Format blog.html with proper HTML structure

--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,10 @@
         <input type="email" name="mail">
         <textarea rows="6" cols="12" name="messages"></textarea>
         <button type="submit">Gönder</button>
+        <div>
+            <div class="yazi1"></div>
+            <div class="yazi2"></div>
+        </div>
     </form>
        <footer>
         <p>&copy; <span id="year"></span> Hatice. Tüm hakları saklıdır.</p>
@@ -68,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
