Refactor blog.html structure and content

--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,15 @@
         </p>
             </article>
     </section>
+     <div>
+            <div class="yazi1"></div>
+            <div class="yazi2"></div>
+        </div>
+        <div class="yazilar">
+            <div class="yazi"></div>
+            <div class="yazi"></div>
+            <div class="yazi"></div>
+        </div>
     <form action="contact.php"method="POST" class="contact-form" key="contact">
         <label>Adınız:</label>
         <input type="text" name="ad">
@@ -56,10 +65,6 @@
         <input type="email" name="mail">
         <textarea rows="6" cols="12" name="messages"></textarea>
         <button type="submit">Gönder</button>
-        <div>
-            <div class="yazi1"></div>
-            <div class="yazi2"></div>
-        </div>
     </form>
        <footer>
         <p>&copy; <span id="year"></span> Hatice. Tüm hakları saklıdır.</p>
@@ -72,6 +77,7 @@
 </body>
 
 </html>
+
 
 
 
