Fix HTML structure and update content

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,9 @@
             <div class="yazi2"></div>
         </div>
         <div class="yazilar">
-            <div class="yazi"></div>
+            <div class="yazi">
+                <p>Lo</p>
+            </div>
             <div class="yazi"></div>
             <div class="yazi"></div>
         </div>
@@ -77,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
