Fix HTML formatting and add missing content

--- a/blog.html
+++ b/blog.html
@@ -48,15 +48,15 @@
             </article>
     </section>
      <div>
-            <div class="yazi1"></div>
+            <div class="yazi1"><p>Lorem</p></div>
             <div class="yazi2"></div>
         </div>
         <div class="yazilar">
             <div class="yazi">
                 <p>Lo</p>
             </div>
-            <div class="yazi"></div>
-            <div class="yazi"></div>
+            <div class="yazi"><p>Lorem</p></div>
+            <div class="yazi"><p>Lorem</p></div>
         </div>
     <form action="contact.php"method="POST" class="contact-form" key="contact">
         <label>Adınız:</label>
@@ -79,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
