Fix HTML formatting and structure in blog.html

--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
         </div>
         <div class="yazilar">
             <div class="yazi">
-                <p>Lo</p>
+                <p>Lor</p>
             </div>
             <div class="yazi"><p>Lorem</p></div>
             <div class="yazi"><p>Lorem</p></div>
@@ -79,6 +79,7 @@
 </body>
 
 </html>
+
 
 
 
