--- a/blog.html
+++ b/blog.html
@@ -54,6 +54,7 @@
         <div class="yazilar">
             <div class="yazi">
                 <p>Lor</p>
+                <p>Lolololo</p>
             </div>
             <div class="yazi"><p>Lorem</p></div>
             <div class="yazi"><p>Lorem</p></div>
@@ -79,6 +80,7 @@
 </body>
 
 </html>
+
 
 
 
