Enhance contact form with file upload option
Added file upload input to the contact form.

--- a/blog.html
+++ b/blog.html
@@ -67,6 +67,8 @@
         <label>Mail</label>
         <input type="email" name="mail">
         <textarea rows="6" cols="12" name="messages"></textarea>
+        <label>Dosya yükle : </label>
+        <input type="file" name="belge">
         <button type="submit">Gönder</button>
     </form>
        <footer>
@@ -80,6 +82,7 @@
 </body>
 
 </html>
+
 
 
 
