--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 Reiciendis explicabo sequi sapiente voluptatibus maiores
                  molestiae? Nisi provident corrupti itaque? Inventore nihil
                   aliquam error. Possimus tempore perferendis deleniti ut doloremque 
-                  sapiente.</p>
+                  sapientea.</p>
         </div>
         <div class="card3">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -99,3 +99,4 @@
 </body>
 
 </html>
+
