--- a/blog.html
+++ b/blog.html
@@ -41,10 +41,8 @@
         </article>
         <article>
             <h4> WEB 4.0 hakkında</h4>
-            <p>
-           Lorem ipsummmm
-            
-        </p>
+            <p>Prg1</p>
+            <p>Prg2</p>
             </article>
     </section>
      <div>
@@ -82,6 +80,7 @@
 </body>
 
 </html>
+
 
 
 
