Fix HTML formatting and improve structure

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
     </header>
     <section>
         <article>
-            <h3>Yapay zeka Fikri ilk ne zaman çıktı?</h3>
+            <h3>Yapay zeka Fikri ilk nee zaman çıktı?</h3>
             <p>Yapay zeka tarihi, ilk önce yapay varlıklara ilişkin mitler,
              öyküler ve söylentilerle başladı. İlk yapay zekâ alanı, 1956 yazında 
              ABD'de Dartmouth Konferansında düzenlenen bir seminerde ortaya çıktı.
@@ -80,6 +80,7 @@
 </body>
 
 </html>
+
 
 
 
