Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                  Ut laborum facilis modi? Tempora necessitatibus sint aperiam
                   fuga praesentium sed saepe, optio repellat est exercitationem
-                   consectetur, sunt suscipit, excepturi dignissimos corrupti!</p>
+                   consectetur, sunt suscipit, excepturii dignissimos corrupti!</p>
         </div>
         <div class="card2">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -99,4 +99,5 @@
 </body>
 
 </html>
+
 
