--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="card3">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                  Accusantium, at. Animi, iste. Dolorum eaque sit numquam est 
-                 debitis, et id dolor itaque quisquam unde odit aliquam perferendis 
+                 debitis, et id doloor itaque quisquam unde odit aliquam perferendis 
                  recusandae voluptatum deleniti.</p>
         </div>
     </nav>
@@ -99,5 +99,6 @@
 </body>
 
 </html>
+
 
 
