--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
                     ABD'de Dartmouth Konferansında düzenlenen bir seminerde ortaya çıktı.
                    1974 yılında, ABD ve İngiliz hükûmetleri yapay zeka alanındaki araştırmaları 
                       finanse etmeyi bıraktı. Bu olay daha sonra "yapay zekâ kışı" olarak anıldı.</p>
-                <!-- Kaynakça<a href="https://tr.wikipedia.org/wiki/Yapay_zek%C3%A2_tarihi">daha fazlası için...wikipedia</a> -->
+                <!-- Kaynakça<a href="https://tr.wikipedia.org/wiki/Yapay_zek%C3%A2_tarihi">daha fazlası iiçin...wikipedia</a> -->
              </article>
              <article>
                  <h4> WEB 4.0 hakkında</h4>
@@ -82,6 +82,7 @@
     </nav> 
 </body>
 </html>
+
 
 
 
