--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                    consectetur, sunt suscipit, excepturii dignissimos corrupti!</p>
         </div>
         <div class="card2">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            <p>Lorem, ipsum dolor sit aamet consectetur adipisicing elit. 
                 Reiciendis explicabo sequi sapiente voluptatibus maiores
                  molestiae? Nisi provident corrupti itaque? Inventore nihil
                   aliquam error. Possimus tempore perferendis deleniti ut doloremque 
@@ -99,6 +99,7 @@
 </body>
 
 </html>
+
 
 
 
